<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientSearch">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="Fill in some/all of the following search criteria: " />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/introname"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clinic Name: " />

            <EditText
                android:id="@+id/name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/introadress"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clinic Address: " />

            <EditText
                android:id="@+id/address"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/introtime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Time: " />

            <EditText
                android:id="@+id/time"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="15dp" />

        </LinearLayout>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paymentDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Day: " />

            <RadioButton
                android:id="@+id/weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weekday" />

            <RadioButton
                android:id="@+id/weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weekend" />
        </RadioGroup>


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="Search" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="backBtn"
            android:layout_gravity="center"
            android:text="Cancel" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>