<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="monospace"
                android:text="Log In"
                android:textColor="#2E7DBB"
                android:textSize="55dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:hint="Enter your username"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Enter your password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:onClick="submitBtn"
                android:text="Submit" />

            <Button
                android:id="@+id/back"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="backBtn"
                android:text="Back" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>