<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePatient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="WELCOME"
            android:textColor="#2E7DBB"
            android:textSize="25dp" />


        <Button
            android:id="@+id/myProfileButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="profileButton"
            android:text="My Profile" />

        <Button
            android:id="@+id/myBookings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="bookingsBtn"
            android:text="My Appointments" />

        <Button
            android:id="@+id/searchBUTTON"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:onClick="welcomeSearchButton"
            android:text="Search for Clinic" />

        <Button
            android:id="@+id/searchServices"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="searchByService"
            android:text="Search for Clinic by Service" />

        <Button
            android:id="@+id/allclinicsbtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="allClinicsButton"
            android:text="View all Clinics" />

        <Button
            android:id="@+id/logoff"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="logoffButton"
            android:text="Log Off" />
    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>